--- a/kakao/index.html
+++ b/kakao/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="css/styles.css"/>
+  <link rel="stylesheet" href="CSS/styles.css"/>
   <!-- link:css 엔터시 위 양식이 생김 -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
